from .dice import Dice
from .intelligence import Intelligence
from .player import Player
from .highscore import HighScore

title = "🐖  P I G   G A M E  🐖"
width = 53

class Game:
    """A class to represent a Pig Dice Game session."""

    WINNING_SCORE = 10  # set to 10 for testing purposes

    def __init__(self):
        """
        Initialize a new game session, including player, computer,
        dice, AI, and highscore tracking. Also prints the game title banner.
        """
        self.player = None
        self.computer = Player("Computer")
        self.dice = Dice()
        self.intelligence = Intelligence()
        self.highest_score = 0
        self.game_over = False
        self.highscores = HighScore()
        self.width = 53

        print("\n╔" + "═" * width + "╗")
        print("║" + " " * width + "║")
        print("║" + title.center(width - 2) + "║")
        print("║" + " " * width + "║")
        print("╚" + "═" * width + "╝")


    # ---------- MENUS ----------
    def menu(self):
        """
        Display the main game menu with options for creating a player,
        starting the game, viewing high scores, reading game rules, or quitting.
        """

        print("\n╔" + "═" * width + "╗")
        print("║" + " " * width + "║")
        print("║" + "1) Create new Player".center(width) + "║")
        print("║" + "2) Play Game".center(width) + "║")
        print("║" + "3) Show Highscore".center(width) + "║")
        print("║" + "4) Game Rules".center(width) + "║")
        print("║" + "5) Quit".center(width) + "║")
        print("║" + " " * width + "║")
        print("╚" + "═" * width + "╝")

    def rules(self):
        """
        Display the game rules in a formatted ASCII frame.
        Explains how turns work, scoring, and how to win.
        """

        print("╔" + "═" * width + "╗")
        print("║" + " " * width + "║")
        print("║" + "🎲 GAME RULES".center(width-1) + "║")
        print("║" + "Each turn, a player repeatedly rolls a die until".center(width) + "║")
        print("║" + "a 1 is rolled or the player decides to 'hold':".center(width) + "║")
        print("║" + "- Rolling a 1 = lose turn points".center(width) + "║")
        print("║" + "- Rolling 2–6 = add to turn total".center(width) + "║")
        print("║" + "- 'Hold' = add turn total to score".center(width) + "║")
        print("║" + "First to reach 100 wins.".center(width) + "║")
        print("║" + " " * width + "║")
        print("╚" + "═" * width + "╝")


    # ---------- GAME LOOP ----------
    def run(self):
        """
        Run the main game loop, displaying menus and handling user choices.
        Supports creating a player, starting a game, showing highscores,
        viewing rules, and quitting the application.
        """
        while True:
            self.menu()
            print("Enter choice:")
            choice = input(">> ").strip()

            if choice == "1":
                while True:
                    print("Enter your name: ")
                    name = input(">> ").strip()
                    if name == "":
                        print("Name cannot be null.")
                        continue
                    self.player = Player(name)
                    print(f"Player created, welcome {name}!")
                    break

            elif choice == "2":
                if not self.player:
                    print("Please create a player first!")
                    continue
                self.start_game()

            elif choice == "3":
                self.highscores.display_all()

            elif choice == "4":
                self.rules()

            elif choice == "5":
                print(f"Goodbye {self.player.name if self.player else 'Player'}!")
                break

            else:
                print("Invalid choice, try again.")

    # ---------- GAME START ----------
    def start_game(self):
        """
        Handle the human player's turn.

        Displays the current scores, provides choices to Roll, Hold, Change name,
        or Exit match. Updates scores and checks for winning conditions.
        """
        if not self.player:
            print("You need to create a player first!")
            return
        self.player.reset_score()
        self.computer.reset_score()
        self.game_over = False

        while True:
            print("Select difficulty (Easy [E] / Hard [H]): ")
            difficulty = input(">> ").strip().lower()
            if difficulty not in ("e","h"):
                print("Please select [E] or [H]")
                continue
            break

        print(f"{'Hard' if difficulty == 'h' else 'Easy'} mode selected.\nLet's begin!")

        while not self.game_over:
            self.play_turn()
            if not self.game_over:
                self.computer_turn()

        if self.player.score > self.computer.score:
            print(f"🎉 {self.player.name} wins the match!")
        elif self.computer.score > self.player.score:
            print(f"💻 {self.computer.name} wins the match!")
        else:
            print("It's a tie!")

    # ---------- PLAYER TURN ----------
    def play_turn(self):
        """
        Handle the computer's turn using AI logic.

        Rolls the dice and decides whether to hold or continue rolling based on
        the projected score and intelligence rules. Updates scores and checks
        for winning conditions.
        """

        print(f"\n{self.player.name}'s turn!")

        while True:
            print("\n╔" + "═" * (width+14) + "╗")
            print("║" + f"{self.player.name}'s score: {self.player.score} | {self.computer.name}'s score: {self.computer.score}".center(width+14) + "║")
            print("╚" + "═" * (width+14) + "╝")
            print("\n╔" + "═" * (width+14) + "╗")
            print("║" + " " * (width+14) + "║")
            print("║" + "[R] Roll  |  [H] Hold  |  [C] Change name  |  [X] Exit match".center(width+14) + "║")
            print("║" + " " * (width+14) + "║")
            print("╚" + "═" * (width+14) + "╝")
            print("")
            choice = input(">> ").strip().lower()

            if choice == "x":
                self.game_over = True
                print("Exiting current game...")
                return

            elif choice == "c":
                print("Enter new name: ")
                new_name = input(">> ").strip().lower()
                self.player.name = new_name
                print(f"Name changed to {new_name}")
                continue

            elif choice == "r":
                roll = self.dice.roll()
                
                print(f"{self.player.name} rolled: {roll}")

                if roll == 1:
                    print("Rolled a 1! You lose your turn points.")
                    return  # lose turn, pass to computer
                self.player.score += roll

                if self.player.score >= self.WINNING_SCORE:
                    print(f"🎉 {self.player.name} wins with {self.player.score} points! 🎉")
                    self.highscores.add_score(self.player.name, self.player.score)
                    self.game_over = True
                    return  # end turn and end game immediately

                else:
                    print(f"Total score: {self.player.score}\n")

            elif choice == "h":
                print(f"Held! Total score: {self.player.score}")
                if self.player.score >= self.WINNING_SCORE:
                    print(f"🎉 {self.player.name} wins with {self.player.score} points!")
                    self.highscores.add_score(self.player.name, self.player.score)
                    self.game_over = True
                return  # end of turn
            else:
                print("Invalid choice.")

    # ---------- COMPUTER TURN ----------
    def computer_turn(self):
        """
    Execute the computer player's turn.

    Rolls dice until the computer decides to hold or rolls a 1.
    Updates scores and checks for a winning condition.
    """
        if self.game_over:
            return

        print("\n💻 Computer's turn!")
        turn_total = 0

        while True:
            roll = self.dice.roll()
            print(f"Computer rolled: {roll}")

            if roll == 1:
                print("Computer rolled a 1 — loses turn points.")
                return  # end turn

            turn_total += roll
            projected_score = self.computer.score + turn_total

            if projected_score >= self.WINNING_SCORE:
                self.computer.score = projected_score
                print(f"💻 Computer wins with {self.computer.score} points!")
                self.highscores.add_score("Computer", self.computer.score)
                self.game_over = True
                return

            if self.intelligence.should_hold(projected_score, self.player.score):
                self.computer.score = projected_score
                print(f"Computer holds at {self.computer.score} points.")
                return

            print("Computer rolls again...")
